# product-crew

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini  test_main.py  test_pid-2025-09-09.md  test_pid.md
product_crew/: __init__.py
product_crew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
product_crew/cli/: __init__.py  main.py
product_crew/crew/: __init__.py  agents.py  agents_backup.py  runner.py  tasks.py  tasks_backup.py
product_crew/demo/: __init__.py  utilities.py
product_crew/file_operations/: __init__.py  handlers.py  templates.py
product_crew/validation/: __init__.py  validators.py
requirements/: model-choice.md  post-setup-refactoring.md  setup-2025-09-04.md  setup.md
requirements/01 setup/: 03_input_validation.md  04_crewai_agent_setup.md  06_integration_and_main_flow.md  07_testing_and_validation.md  setup.md
requirements/02 demo-mode/: 08_demo_mode_cli_flag.md  09_interactive_step_control.md  10_crew_visualization_enhancement.md  11_demo_integration_testing.md  demo-mode.md
requirements/03 model-choice/: 12_model_cli_option.md  13_model_validation.md  14_crewai_model_integration.md  15_model_testing_and_validation.md  model-choice.md
requirements/04 post-setup-refactoring/: 16_project_structure_design.md  17_validation_module_extraction.md  18_file_operations_module_extraction.md  19_crew_module_extraction.md  20_demo_module_extraction.md  21_cli_module_organization.md  22_test_integration_and_validation.md
requirements/05 cleanup-missing-key/: 05 cleanup-missing-key.md
requirements/06 refactor-tests-structure/: 06 refactor-tests-structure.md
requirements/07 provider-choice/: 07 provider-choice.md
requirements/08 product-crew-implementation/: 01_agent_definitions_and_roles.md  02_agent_tools_and_capabilities.md  03_collaborative_workflow_design.md  04_iteration_control_and_exit_criteria.md  05_pid_output_structure.md  06_integration_testing_and_validation.md  07_demo_mode_enhancement.md  product-crew-implementation.md
requirements/09 follow-product-refinement-lifecycle/: 01_analyze_lifecycle_requirements.md  02_design_multi_phase_workflow.md  03_create_phase_specific_tasks.md  04_implement_solution_evaluation.md  05_create_implementation_planning.md  06_update_delegation_orchestration.md  07_testing_and_validation.md  09 follow-product-refinement-lifecycle.md  task_01_analysis_results.md  task_02_workflow_design.md
requirements/10 refine-problem-understanding/: 01_gap_analysis.md  02_gaps_prioritization.md  initial_pid.md  (+7 more)
template/: pid.md
test/: __init__.py  common.py  test_main.py
(+62 files in other folders)
