[project]
name = "product-crew"
version = "0.1.0"
description = "A team of agents acting as a senior product trio to discover, research and design product initiative documents"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.28.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
product-crew = "main:cli"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=main",
    "--cov-report=term-missing"
]
filterwarnings = [
    "ignore:.*PydanticSerializationUnexpectedValue.*:UserWarning",
    "ignore:.*Pydantic serializer warnings.*:UserWarning",
    "ignore::ResourceWarning",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning"
]

[tool.uv]
package = true
