[project]
name = "product-crew"
version = "0.1.0"
description = "A team of agents acting as a senior product trio to discover, research and design product initiative documents"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.28.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["product_crew", "product_crew.cli", "product_crew.validation", "product_crew.file_operations", "product_crew.crew", "product_crew.demo"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
product-crew = "product_crew.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=product_crew",
    "--cov-report=term-missing"
]
filterwarnings = [
    "ignore:.*PydanticSerializationUnexpectedValue.*:UserWarning",
    "ignore:.*Pydantic serializer warnings.*:UserWarning",
    "ignore::ResourceWarning",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning"
]

[tool.uv]
package = true
